# Task_Rosctelecom

./: .gitignore  README.md  example.xlsx  main.py  pyproject.toml  tariffs.xlsx
app/: parser_rialcom.py
